Fix PCA logo on IE11

--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -161,7 +161,6 @@
 	.studio-thumb {
 		border-radius: 3px;
 		overflow: hidden;
-		display: inline-block;
 	}
 	.studio-content {
 		@include media-breakpoint-down(xs) {
